--- a/serverless.yml
+++ b/serverless.yml
@@ -1,16 +1,3 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
 service: produtos-mercado
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
@@ -24,9 +11,11 @@ provider:
   name: aws
   runtime: python3.8
 
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  environment:
+    SHOPPING_LIST_TABLE: ShoppingList-${self:provider.stage}
+
+  stage: ${opt:stage, 'dev'}
+  region: ${opt:region, 'us-east-1'}
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -61,60 +50,23 @@ functions:
   create_new_list:
     handler: src/handler.create_list
     events:
-      - httpApi:
-          path: /shopping-list
-          method: post
+      - httpApi: 'POST /shopping-list'
 
-  hello:
-    handler: src/handler.hello
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-    events:
-      - httpApi:
-          path: /categories
-          method: get
-#      - websocket: $connect
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-#      - alb:
-#          listenerArn: arn:aws:elasticloadbalancing:us-east-1:XXXXXX:listener/app/my-load-balancer/50dc6c495c0c9188/
-#          priority: 1
-#          conditions:
-#            host: example.com
-#            path: /hello
+resources:
+  Resources:
 
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+    ShoppingListTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: owner-email
+            AttributeType: S
+          - AttributeName: owner-name
+            AttributeType: S
+        KeySchema:
+          - AttributeName: owner-email
+            KeyType: HASH
+          - AttributeName: owner-name
+            KeyType: RANGE
+        BillingMode: PAY_PER_REQUEST
+        TableName: ${self:provider.environment.SHOPPING_LIST_TABLE}
